--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -28,6 +28,10 @@ msgctxt "#30002"
 msgid "Generated Files Directory"
 msgstr ""
 
+msgctxt "#30003"
+msgid "Force Run Now"
+msgstr ""
+
 ##COMMON##
 
 msgctxt "#32000"
