--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
-msgid "Generate Every X mins"
+msgid "Merge Files Every X mins"
 msgstr ""
 
 msgctxt "#30001"
@@ -25,7 +25,7 @@ msgid "Auto Reload IPTV Simple Client"
 msgstr ""
 
 msgctxt "#30002"
-msgid "Generated Files Directory"
+msgid "Merged Files Output Directory"
 msgstr ""
 
 msgctxt "#30003"
@@ -37,7 +37,7 @@ msgid "Add Playlist / EPG"
 msgstr ""
 
 msgctxt "#30005"
-msgid "Generate Now"
+msgid "Merge Now"
 msgstr ""
 
 msgctxt "#30006"
@@ -49,7 +49,7 @@ msgid "Are you sure you want to delete?"
 msgstr ""
 
 msgctxt "#30008"
-msgid "Generate started"
+msgid "Merge started"
 msgstr ""
 
 msgctxt "#30009"
