--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -21,19 +21,15 @@ msgid "Merge Files Every X mins"
 msgstr ""
 
 msgctxt "#30001"
-msgid "Auto Reload IPTV Simple Client"
+msgid "Auto Reload PVR"
 msgstr ""
 
 msgctxt "#30002"
 msgid "Merged Files Output Directory"
 msgstr ""
 
-msgctxt "#30003"
-msgid "IPTV Simple Client Settings"
-msgstr ""
-
 msgctxt "#30004"
-msgid "Add Playlist / EPG"
+msgid "Add Source"
 msgstr ""
 
 msgctxt "#30005"
@@ -41,11 +37,11 @@ msgid "Merge Now"
 msgstr ""
 
 msgctxt "#30006"
-msgid "Delete"
+msgid "Delete source"
 msgstr ""
 
 msgctxt "#30007"
-msgid "Are you sure you want to delete?"
+msgid "Are you sure you want to delete this source?"
 msgstr ""
 
 msgctxt "#30008"
