--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -49,7 +49,11 @@ msgid "Are you sure you want to delete this source?"
 msgstr ""
 
 msgctxt "#30008"
-msgid "Merge started"
+msgid "Merge Started"
+msgstr ""
+
+msgctxt "#30009"
+msgid "You need to set an Output Directory in Settings"
 msgstr ""
 
 msgctxt "#30010"
@@ -110,6 +114,10 @@ msgstr ""
 
 msgctxt "#30024"
 msgid "PVR Demo Client"
+msgstr ""
+
+msgctxt "#30025"
+msgid "Merge Complete"
 msgstr ""
 
 ##COMMON##
@@ -256,4 +264,20 @@ msgstr ""
 
 msgctxt "#32033"
 msgid "Failed to download required file: {filename}"
+msgstr ""
+
+msgctxt "#32034"
+msgid "General"
+msgstr ""
+
+msgctxt "#32035"
+msgid "Playback"
+msgstr ""
+
+msgctxt "#32036"
+msgid "Advanced"
+msgstr ""
+
+msgctxt "#32037"
+msgid "Verify SSL Certs"
 msgstr ""
